Bug 1223316 - [CID 1242519] Position of arguments to nssCKFWSession_SetPIN don't match